docs: README as a front door, the deep dives as pages, and an adversarial accuracy pass
The README is now 280 lines: what it is, the measured numbers with their conditions,
quick start, one section per language (Python, Rust, C#, Java, Go; C/C++ and R), the
documentation map, what it does, packages, status, upstream, licence.  Nothing was
deleted: every former section moved verbatim or was merged into the page that owns it,
and each move was audited line by line --

* docs/how-it-works/{performance,delegation,partitioned-reads,prefetch,connection-keywords}.md
  from the Performance, Native delegation, Partitioned reads, Prefetch and
  'Connection keywords set for you' sections (the multi-row INSERT batching table
  joins the performance page);
* docs/reference/install.md from Build / Install / Use by name;
* docs/languages/r.md from Use from R (tests/r/smoke.R now diffs against it);
* the Use from Rust / C# / Java / Go / Python sections merged into their language pages,
  the Test section into reference/building.md, the Linux compatibility matrix into
  docs/COMPATIBILITY.md's Verified table.

Then an adversarial review over README, every docs page, bench/README and the two web
pages: 12 finders, each finding attacked by independent refuters; 75 of 82 survived and
all were fixed against the code -- among them the Linux wheel tag (manylinux_2_28), a
cmake --prefix recipe that put the manifest where nothing searches it, timestamp[s] that
the reader never produces, a Cargo git dependency using a key Cargo does not have, the
Windows language grid at 219 of 230 (the bench headline said 220), the delegation
timings from the measured table, the R smoke test's stale README dependency, and the
lowercase brand in prose.  docs/index.md, mkdocs.yml and the site navigation carry the
new pages; every relative link and anchor across 46 Markdown files resolves.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QhuLMRciVAQdqKEpy